# timer-cli

./: Cargo.toml  README.md
src/: cancel.rs  config.rs  daemon.rs  duration_mins.rs  main.rs  parse.rs  start.rs  status.rs  time_entry.rs  unix_epoch.rs
